# agent-panel

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/hooks/: beep.sh  install-beep-hook.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agents/: input_monitor.rs  lifecycle.rs  manager.rs  mod.rs  output_parser.rs
src-tauri/src/commands/: agent_commands.rs  cron_commands.rs  message_commands.rs  mod.rs  notion_commands.rs  settings_commands.rs  skill_commands.rs  swarm_commands.rs  telegram_commands.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/integrations/: claude_mem.rs  mod.rs  notion.rs  telegram.rs
src-tauri/src/mcp/: mod.rs  server.rs
src-tauri/src/orchestrator/: coordinator.rs  cron_runner.rs  message_bus.rs  mod.rs  swarm.rs
src-tauri/src/skills/: manager.rs
src-tauri/tests/: swarm_flow.rs
src/components/agents/: AgentCard.tsx  AgentConfig.tsx  AgentList.tsx  AgentLog.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/settings/: GeneralSettings.tsx  NotionConfig.tsx  TelegramConfig.tsx
src/components/skills/: SkillEditor.tsx  SkillList.tsx
src/components/swarm/: CronJobs.tsx  KnowledgeBase.tsx  MessageFeed.tsx  (+2 more)
src/hooks/: useAgents.ts  useCronJobs.ts  useMessages.ts  useSettings.ts  useSwarm.ts
src/lib/: tauri.ts  types.ts  utils.ts
src/pages/: Agents.tsx  Dashboard.tsx  Settings.tsx  Skills.tsx  Swarm.tsx  Tasks.tsx
src/styles/: globals.css
(+2 files in other folders)
