[package]
name = "agent-panel"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
axum = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
